# test-fastapi-bot

./: .env.exemple  .pre-commit-config.yaml  Dockerfile  Readme.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 0eadaf293d3a_init_database.py
app/api/: api.py
app/api/routers/: channel.py  guild.py
app/core/: config.py  database.py
app/crud/: base.py  channel.py  guild.py
app/models/: __init__.py  channel.py  guild.py  message.py  models.py  reaction.py  user.py  user_guild_info.py
