[tool.poetry]
name = "test-fastapi-bot"
version = "0.0.1"
description = ""
authors = ["Martinez Loic"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
gunicorn = "^21.2.0"
python-multipart = "^0.0.9"
email-validator = "^2.1.1"
pydantic = "^2.6.4"
alembic = "^1.13.1"
sqlmodel = "^0.0.16"
psycopg = {extras = ["binary"], version = "^3.1.18"}
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
pre-commit = "^3.7.0"

[tool.poetry.scripts]
generate = "alembic revision --autogenerate"
migrate = "alembic upgrade head"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "alembic",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
